Fix contrast issue

--- a/src/css/timeline.scss
+++ b/src/css/timeline.scss
@@ -23,7 +23,7 @@
 		justify-content: center;
 		align-items: center;
 
-		background: linear-gradient(130deg, var(--colour-start) 0%, var(--colour-end) 100%);
+		background: linear-gradient(150deg, var(--colour-start) 0%, var(--colour-end) 100%);
 	}
 
 	.content {
